--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,3 +32,4 @@ jobs:
       with:
         user: LFroling
         password: ${{ secrets.PYPI_API_TOKEN }}
+        distribution_file: release-package/*.tar.gz
