--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - '**.toml'
+      - 'release-package/**.toml'
 
 permissions:
   contents: read
