--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,4 +32,4 @@ jobs:
       with:
         user: LFroling
         password: ${{ secrets.PYPI_API_TOKEN }}
-        packages_dir: release-package
+        packages_dir: release-package/dist
