--- a/.github/workflows/update-gh-pages.yml
+++ b/.github/workflows/update-gh-pages.yml
@@ -19,7 +19,7 @@ jobs:
         run: git rm -rf .
 
       - name: Copy directory from main to gh-pages
-        run: cp -a path/to/your/directory/. .
+        run: cp -a example-book/. .
 
       - name: Commit changes
         run: |
