--- a/.github/workflows/update-gh-pages.yml
+++ b/.github/workflows/update-gh-pages.yml
@@ -15,21 +15,16 @@ jobs:
         with:
           ref: main
 
-      - name: Remove existing files in gh-pages branch
-        run: git rm -rf .
+      - name: Install git
+        run: sudo apt-get install git -y
 
-      - name: Copy directory from main to gh-pages
-        run: cp -a example-book .
-
-      - name: Commit changes
+      - name: Copy directory to gh-pages branch
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
+          git clone --branch gh-pages --single-branch https://github.com/${GITHUB_REPOSITORY} gh-pages
+          cp -a example-book/. gh-pages/
+          cd gh-pages
+          git config user.email "actions@github.com"
+          git config user.name "GitHub Actions"
           git add .
           git commit -m "Copy directory from main to gh-pages"
-      
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          branch: gh-pages
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          git push origin gh-pages
