--- a/.github/workflows/update-gh-pages.yml
+++ b/.github/workflows/update-gh-pages.yml
@@ -1,30 +1,24 @@
-name: Copy Directory to gh-pages
+name: Copy folder to other branch
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
-  copy-directory:
+  copy:
+    name: Copy my folder
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout main branch
-        uses: actions/checkout@v2
-        with:
-          ref: main
-
-      - name: Install git
-        run: sudo apt-get install git -y
-
-      - name: Copy directory to gh-pages branch
+      - uses: actions/checkout@v2
+      - name: copy
+        env:
+          SRC_FOLDER_PATH: 'example-book'
+          TARGET_BRANCH: 'gh_pages'
         run: |
-          git clone --branch gh-pages --single-branch https://github.com/${GITHUB_REPOSITORY} gh-pages
-          cp -a example-book/. gh-pages/
-          cd gh-pages
-          git config user.email "actions@github.com"
-          git config user.name "GitHub Actions"
-          git add .
-          git commit -m "Copy directory from main to gh-pages"
-          git push origin gh-pages
+          files=$(find $SRC_FOLDER_PATH -type f) # get the file list
+          git config --global user.name 'GitHub Action'
+          git config --global user.email 'action@github.com'
+          git fetch                         # fetch branches
+          git checkout $TARGET_BRANCH       # checkout to your branch
+          git checkout ${GITHUB_REF##*/} -- $files # copy files from the source branch
+          git add -A
+          git diff-index --quiet HEAD ||  git commit -am "deploy files"  # commit to the repository (ignore if no modification)
+          git push origin $TARGET_BRANCH # push to remote branch
