--- a/.github/workflows/update-gh-pages.yml
+++ b/.github/workflows/update-gh-pages.yml
@@ -13,7 +13,8 @@ jobs:
           SRC_FOLDER_PATH: 'example-book'
           TARGET_BRANCH: 'gh_pages'
         run: |
-          files=$(find $SRC_FOLDER_PATH -type f) # get the file list
+          # Find all files within the src folder excluding the src folder itself
+          files=$(find $SRC_FOLDER_PATH/* -type f)
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           git fetch                         # fetch branches
@@ -27,3 +28,4 @@ jobs:
           git add -A
           git diff-index --quiet HEAD || git commit -am "deploy files"  # commit to the repository (ignore if no modification)
           git push origin $TARGET_BRANCH # push to remote branch
+
