--- a/.github/workflows/update-gh-pages.yml
+++ b/.github/workflows/update-gh-pages.yml
@@ -17,7 +17,8 @@ jobs:
           git config --global user.email 'action@github.com'
           git fetch                         # fetch branches
           git checkout $TARGET_BRANCH       # checkout to your branch
-        
+          echo "Source folder path: $SRC_FOLDER_PATH"
+
           # Use rsync to copy files from the source directory to the current directory
           rsync -av --exclude='.*' "$SRC_FOLDER_PATH"/ ./ --relative
         
